# coup-d-bot

./: .gitignore  README.md  bot.py  pylintrc  pyproject.toml
coupdbot/: __main__.py  bot.py  cards.py  errors.py  game.py  player.py
locales/: base.pot
locales/en/LC_MESSAGES/: base.mo
locales/pt/LC_MESSAGES/: base.mo  base.po
