[tool.poetry]
name = "coupdbot"
version = "0.1.0"
description = ""
authors = ["João Gabriel Trombeta <joaog.trombeta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telepot = "^12.7"
carl = "^0.0.7"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.5.3"
flake8 = "^3.8.3"
pylint-quotes = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
